# tacoxDNA

./: .gitignore  .project  .pydevproject  CHANGELOG  MANIFEST.in  README.md  requirements.txt  setup.cfg
.github/workflows/: test.yml
1-xyz-to-oxdna/: 00rivestimento.bash  centerline.py  function_twist.py  function_writhe.py  map_oxdna_on_beads_only_random_chains.py
2-oxdna-to-lammps/lammps-to-oxdna/: conf0.xyz  convert_lammps_file_to_oxdna_file.bash  converter_lammps_to_oxdna.py
2-oxdna-to-lammps/oxdna-to-lammps/: 00convert.bash  convert_oxdna_file_to_lammps_file.bash  converter.py  generated_51.top  oxdna.lammps  pbs.script.with.restart.dependency.bash  test_oxdna.input  tmp1
3-analisi-twist-write-oxdna-conf/: analisi_topology_dsdna.bash  analisi_topology_dsdna.py  function_linking_number.py  function_twist.py  function_writhe.py
docs/: outline_tools.txt
src/: CanDo_oxDNA.py  LAMMPS_oxDNA.py  PDB_oxDNA.py  Tiamat_oxDNA.py  XYZ_oxDNA.py  cadnano_oxDNA.py  centerline-to-oxDNA.py  lammps-to-oxDNA.py  out.1.lammpstrj  oxDNA-to-all-atom.py  oxDNA-to-lammps.py  oxDNA_LAMMPS.py  oxDNA_PDB.py  rpoly_oxDNA.py  vHelix_oxDNA.py
src/libs/: base.py  cadnano_utils.py  pdb.py  read_write_lammps_traj.py  reader_lammps_init.py  reader_lammps_traj.py  readers.py  topology.py  utils.py
src/libs/pyquaternion/: __init__.py
src/tacoxDNA/: CanDo_oxDNA.py  LAMMPS_oxDNA.py  PDB_oxDNA.py  Tiamat_oxDNA.py  XYZ_oxDNA.py  cadnano_oxDNA.py  oxDNA_LAMMPS.py  oxDNA_PDB.py  rpoly_oxDNA.py  scadnano_oxDNA.py  vHelix_oxDNA.py
src/tacoxDNA.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/tacoxDNA/libs/: constants.py  reader_lammps_init.py  (+1 more)
tests/: conf_diff.py  run_all.sh
tests/CanDo_oxDNA/: correct_output.top  junction.cndo  run.sh
tests/LAMMPS_oxDNA/: run.sh  run_single_conf.sh  run_trajectory.sh
tests/PDB_oxDNA/: input.pdb.oxdna  input.pdb.top  run.sh
tests/Tiamat_oxDNA/: correct_output.top  input.dnajson  run.sh
tests/XYZ_oxDNA/: centerline.dat.oxdna  correct_open_output.oxdna  correct_open_output.top  correct_simple_output.oxdna  correct_single_output.oxdna  run_open.sh  run_simple.sh  run_single.sh
tests/cadnano_oxDNA/: init.json  init.json.oxdna  init.json.top  run.sh
tests/centerline-to-oxDNA/: centerline.dat.oxdna  centerline.dat.top  correct_simple_output.oxdna  correct_single_output.oxdna  run_simple.sh  run_single.sh
tests/lammps-to-oxDNA/: correct_output.top  run.sh
tests/oxDNA-to-all-atom/: run.sh
tests/oxDNA-to-lammps/: run.sh
tests/oxDNA_LAMMPS/: run.sh
tests/oxDNA_PDB/: run.sh
tests/rpoly_oxDNA/: correct_output.top  input.rpoly  octahedron1.conf  octahedron1.top  run.sh
tests/scadnano_oxDNA/: correct_output.top  run.sh
tests/vHelix_oxDNA/: correct_output.top  correct_output_with_deletion.top  input.ma  input_with_deletion.ma  run.sh  run_no_deletion.sh  run_with_deletion.sh
