[metadata]
name = tacoxDNA
version = 1.1.0
description = tacoxDNA Tools and Converters for oxDNA
long_description = file: README.md
long_description_content_type = text/markdown

author = Rovigatti, Lorenzo
author_email = lorenzo.rovigatti@gmail.com
url = https://github.com/lorenzo-rovigatti/tacoxDNA.git
project_urls =
    github repository = https://github.com/lorenzo-rovigatti/tacoxDNA.git

license = GPL-3
license_files = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3

[options]
package_dir=
    =src
include_package_data = True
packages = find:
install_requires =
    numpy
python_requires = >=3.0
zip_safe = no

[options.packages.find]
where=src

[options.entry_points] 
console_scripts = 
    cadnano_oxDNA = tacoxDNA.cadnano_oxDNA:main
    CanDo_oxDNA = tacoxDNA.CanDo_oxDNA:main
    LAMMPS_oxDNA = tacoxDNA.LAMMPS_oxDNA:main
    oxDNA_LAMMPS = tacoxDNA.oxDNA_LAMMPS:main
    oxDNA_PDB = tacoxDNA.oxDNA_PDB:main
    PDB_oxDNA = tacoxDNA.PDB_oxDNA:main
    rpoly_oxDNA = tacoxDNA.rpoly_oxDNA:main
    scadnano_oxDNA = tacoxDNA.scadnano_oxDNA:main
    Tiamat_oxDNA = tacoxDNA.Tiamat_oxDNA:main
    vHelix_oxDNA = tacoxDNA.vHelix_oxDNA:main
    XYZ_oxDNA = tacoxDNA.XYZ_oxDNA:main

[options.package_data]
prediction = py.typed
